<resources>
    <!--App related data-->
    <string name="app_name">MediScreen</string>

    <!--Activities-->
    <string name="homeTitle">Home</string>
    <string name="loginTitle">Login</string>
    <string name="registerTitle">Create an account</string>
    <string name="mainTitle">MediScreen</string>
    <string name="supportTitle">Support</string>
    <string name="diagnosisTitle">Diagnosis</string>
    <string name="feedbackTitle">Feedback</string>
    <string name="profileTitle">Profile</string>
    <string name="helpTitle">Help</string>
    <string name="recoveryTitle">Forgot password</string>
    <string name="diabetesTitle">Run diagnosis for diabetes</string>
    <string name="heartTitle">Run diagnosis for heart disease</string>
    <string name="lungTitle">Run diagnosis for lung cancer</string>
    <string name="editprofileTitle">Edit profile</string>
    <string name="addGPTitle">GP details</string>
    <string name="addInsurerTitle">Insurer details</string>
    <string name="medicalHistoryTitle">Medical history</string>
    <string name="heartHistoryTitle">Heart history</string>
    <string name="diabetesHistoryTitle">Diabetes history</string>
    <string name="lungHistoryTitle">Lung cancer history</string>


    <!--Diagnosis text-->
    <string name="diabetes1">How many times have you been pregnant?</string>
    <string name="diabetes2">2-hour plasma glucose concentration </string>
    <string name="diabetes3">Diastolic blood pressure\n(mm Hg)</string>
    <string name="diabetes4">Triceps skin fold thickness (mm)</string>
    <string name="diabetes5">2-hour serum insulin\n(mu U/ml)</string>
    <string name="diabetes6">BMI (Body mass index)</string>
    <string name="diabetes7">Diabetes pedigree function</string>

    <string name="heart3">cp</string>
    <string name="heart4">trestbps</string>
    <string name="heart5">chol</string>
    <string name="heart6">fbs</string>
    <string name="heart7">restecg</string>
    <string name="heart8">thalach</string>
    <string name="heart9">exang</string>
    <string name="heart10">oldpeak</string>
    <string name="heart11">slope</string>
    <string name="heart12">ca</string>
    <string name="heart13">thal</string>
    <string name="heart14">target</string>

    <string name="lung2">Do you smoke?</string>
    <string name="lung3">AreaQ</string>
    <string name="lung4">Do you drink alcohol?</string>
    <string name="lung5">Result</string>






    <!--TextViews-->
    <string name="firstNameTextView">First name:</string>
    <string name="lastNameTextView">Last name:</string>
    <string name="emailTextView">Email:</string>
    <string name="phoneNoTextView">Phone No.:</string>
    <string name="patientNoTextView">Patient No.:</string>
    <string name="passwordTextView">Password:</string>
    <string name="repeatPasswordTextView">Re-Password:</string>
    <string name="firstNameValTextView">you cannot leave first name blank</string>
    <string name="lastNameValTextView">you cannot leave last name blank</string>
    <string name="emailAtValTextView">your email must contain @</string>
    <string name="diagnosisInputValTextView">you cannot leave empty fields</string>
    <string name="phoneNoValTextView">you cannot leave phone number blank</string>
    <string name="passwordValTextView">you cannot leave password blank</string>
    <string name="passwordLengthValTextView">password must be at least 6 chars long</string>
    <string name="passwordMatchValTextView">your passwords do not match</string>
    <string name="ageValTextView">age cannot be empty</string>
    <string name="genderValTextView">please select your gender</string>

    <string name="diagnosisChoice">Run diagnosis for…</string>
    <string name="mainMessage">Logged in as</string>
    <string name="menuMessage">Menu</string>
    <string name="ageTextView">Age:</string>
    <string name="genderTextView">Gender:</string>


    <!--EditText-->
    <string name="emailHintEditText">\@</string>
    <string name="passwordHintEditText">password</string>

    <!--Notifications-->
    <string name="accountCreatedToast">Account created!</string>
    <string name="accountCreateFailToast">Could not create an account...</string>
    <string name="passwordRecoveredToast">We have sent you an email!</string>
    <string name="passwordRecoveredFailToast">Account not found!</string>
    <string name="loginToast">Logging in...</string>
    <string name="diagnosisValuesAddedToast">Medical history added!</string>
    <string name="loginFailToast">Login failed!</string>
    <string name="profileUpdatedToast">Profile updated!</string>
    <string name="redirectingToast">Redirecting…</string>



    <!--AlertDialog-->

    <!--Buttons-->
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="resetButton">Reset</string>
    <string name="submitButton">Submit</string>
    <string name="forgotPasswordButton">Forgot your password?</string>
    <string name="supportButton">Support</string>
    <string name="callButton">Call GP</string>
    <string name="aiButton">Diagnosis</string>
    <string name="feedbackButton">Feedback</string>
    <string name="profileButton">Profile</string>
    <string name="helpButton">Help</string>
    <string name="diabetesButton">Diabetes</string>
    <string name="heartdiseaseButton">Heart disease</string>
    <string name="lungcancerButton">Lung cancer</string>
    <string name="editProfileButton">Edit profile</string>
    <string name="gpButton">GP details</string>
    <string name="insurerButton">Insurance provider</string>
    <string name="saveChangesButton">Save changes</string>
    <string name="medHistoryButton">Insert medical history</string>
    <string name="skipButton">Skip</string>
    <string name="nextButton">Next</string>
    <string name="finishButton">Finish</string>
    <string name="returnMenuButton">Main menu</string>
    <string name="yesRadioButton">Yes</string>
    <string name="noRadioButton">No</string>







    <!--Extra-->
    <string name="recoveryMessage1">Don\'t worry!</string>
    <string name="genderValidationChoice">Select…</string>
    <string name="recoveryMessage2">We need your registered email and we will send you email with instructions to reset your password.</string>

    <string-array name="gender_array">
        <item>Select…</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>


</resources>
