<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/mainlay1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mainMessage" />

            <TextView
                android:id="@+id/textViewWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="50dp"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewMenuuu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menuMessage" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/profileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:text="@string/profileButton" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/callButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:text="@string/callButton" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/aiButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:text="@string/aiButton" />

            <LinearLayout
                android:id="@+id/mainlay1.1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainlay1.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>