<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/buttonEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:text="@string/editProfileButton" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/buttonGPDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:text="@string/gpButton" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/buttonInsurerDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:text="@string/insurerButton" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>