<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MedicalHistoryActivityP3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lunglay1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lunglay1.1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textViewL2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/lung2"
                    android:textAlignment="center" />

                <RadioGroup
                    android:id="@+id/radioGroupLung1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonYes1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yesRadioButton" />

                    <RadioButton
                        android:id="@+id/radioButtonNo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noRadioButton" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lunglay1.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewL3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/lung3"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/editTextLungInput3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lunglay1.3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewL4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/lung4"
                    android:textAlignment="center" />

                <RadioGroup
                    android:id="@+id/radioGroupLung2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonYes2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yesRadioButton" />

                    <RadioButton
                        android:id="@+id/radioButtonNo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noRadioButton" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lunglay1.4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewL5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/lung5"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/editTextLungInput5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewVal16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="#F44336"/>

            <LinearLayout
                android:id="@+id/lunglay1.13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSkipLung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/skipButton" />

                <Button
                    android:id="@+id/buttonFinishLung"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/finishButton" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>